--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -1,30 +1,52 @@
 <div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+  <h1>{{ page.title }}</h1>
+
+  <div class="row">
+    <div class="col-sm-6 col-md-8 tagline">
+      {% if page.tagline %}<p>{{page.tagline}}</p>{% endif %}
+    </div>
+    <div class="col-sm-5 col-md-3 date">
+      <span>{{ page.date | date: "%Y-%b-%-d %H:%M" }} UTC</span>
+    </div>
+  </div>
 </div>
 
 <div class="row post-full">
   <div class="col-md-12">
-    <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
-    </div>
+
     <div class="content">
       {{ content }}
     </div>
 
-    {% unless page.categories == empty %}
-      <ul class="tag_box inline">
-        <li><i class="icon-folder-open"></i></li>
-        {% assign categories_list = page.categories %}
-        {% include JB/categories_list %}
-      </ul>
-    {% endunless %}
+    {% unless page.categories == empty && page.tags == empty %}
+      <div class="row">
 
-    {% unless page.tags == empty %}
-      <ul class="tag_box inline">
-        <li><i class="icon-tags"></i></li>
-        {% assign tags_list = page.tags %}
-        {% include JB/tags_list %}
-      </ul>
+      {% unless page.categories == empty %}
+        <div class="col-sm-4 col-md-3">
+          <hr />
+          <span>Categories</span>
+          <ul class="tag_box inline">
+            <li><i class="icon-folder-open"></i></li>
+            {% assign categories_list = page.categories %}
+            {% include JB/categories_list %}
+          </ul>
+        </div>
+      {% endunless %}
+
+      {% unless page.tags == empty %}
+        <div class="col-sm-8 col-md-9">
+          <hr />
+          <span>Tags</span>
+          <ul class="tag_box inline">
+            <li><i class="icon-tags"></i></li>
+            {% assign tags_list = page.tags %}
+            {% include JB/tags_list %}
+          </ul>
+        </div>
+      {% endunless %}
+
+
+      </div>
     {% endunless %}
 
     <hr>
