--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -1,5 +1,8 @@
 <div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+  <h1>{{ page.title }}</h1>
+    {% if page.tagline %}
+        <div class="tagline">{{ page.tagline }}</div>
+    {% endif %}
 </div>
 
 <div class="row">
